force-app/main/default/objects/leaseworks__Aircraft_Type__c/leaseworks__Aircraft_Type__c.object-meta.xml
<CustomObject>
    <description>Object that captures trends in aircraft types based on conversations that are happening across fleets and customers.</description>
    <label>Aircraft Type</label>
    <nameField>
        <label>Aircraft Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Aircraft Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>