force-app/main/default/objects/leaseworks__Aircraft_Type__c/fields/leaseworks__Aircraft_Variant__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Aircraft_Variant__c</fullName>
    <label>Z_Unused_2309 Variant</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>leaseworks__Aircraft_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>10 (GE)</fullName>
            </value>
            <value>
                <fullName>10 (RR)</fullName>
            </value>
            <value>
                <fullName>100</fullName>
            </value>
            <value>
                <fullName>1000 (RR)</fullName>
            </value>
            <value>
                <fullName>100C (Raisbeck Stage 3 System)</fullName>
            </value>
            <value>
                <fullName>100F (DuganAir Stage 3 System)</fullName>
            </value>
            <value>
                <fullName>100F (M)</fullName>
            </value>
            <value>
                <fullName>100F (M) (Raisbeck Stage 3 System)</fullName>
            </value>
            <value>
                <fullName>100F (M) (Stage 3 Hushkits)</fullName>
            </value>
            <value>
                <fullName>100 neo</fullName>
            </value>
            <value>
                <fullName>100QC (Raisbeck Stage 3 System)</fullName>
            </value>
            <value>
                <fullName>100 Sharklets</fullName>
            </value>
            <value>
                <fullName>110 (CFM)</fullName>
            </value>
            <value>
                <fullName>110 (CFM) Sharklets</fullName>
            </value>
            <value>
                <fullName>120 (P&amp;W)</fullName>
            </value>
            <value>
                <fullName>130 (IAE)</fullName>
            </value>
            <value>
                <fullName>130 (IAE) Sharklets</fullName>
            </value>
            <value>
                <fullName>150 neo (CFM)</fullName>
            </value>
            <value>
                <fullName>200</fullName>
            </value>
            <value>
                <fullName>200/300</fullName>
            </value>
            <value>
                <fullName>200 (GE)</fullName>
            </value>
            <value>
                <fullName>200 (P&amp;W)</fullName>
            </value>
            <value>
                <fullName>200 (RR)</fullName>
            </value>
            <value>
                <fullName>200 Advanced</fullName>
            </value>
            <value>
                <fullName>200 Advanced (DuganAir Stage 3 System)</fullName>
            </value>
            <value>
                <fullName>200 Advanced (Raisbeck Stage 3 System)</fullName>
            </value>
            <value>
                <fullName>200 Advanced (Stage 3 Hushkits)</fullName>
            </value>
            <value>
                <fullName>200B (GE)</fullName>
            </value>
            <value>
                <fullName>200B (P&amp;W)</fullName>
            </value>
            <value>
                <fullName>200B Combi (GE)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>