force-app/main/default/objects/leaseworks__Aircraft_Type__c/fields/leaseworks__Asset_Type_GP__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Asset_Type_GP__c</fullName>
    <label>Asset Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>leaseworks__Asset_Type_Global</valueSetName>
    </valueSet>
</CustomField>