force-app/main/default/objects/leaseworks__Aircraft_Type__c/fields/leaseworks__Engine_Variant__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Engine_Variant__c</fullName>
    <label>Z_Unused_2309 Engine Variant</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>leaseworks__Engine_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>17</fullName>
            </value>
            <value>
                <fullName>875</fullName>
            </value>
            <value>
                <fullName>877</fullName>
            </value>
            <value>
                <fullName>884</fullName>
            </value>
            <value>
                <fullName>892</fullName>
            </value>
            <value>
                <fullName>895</fullName>
            </value>
            <value>
                <fullName>2037</fullName>
            </value>
            <value>
                <fullName>2040</fullName>
            </value>
            <value>
                <fullName>2043</fullName>
            </value>
            <value>
                <fullName>4052</fullName>
            </value>
            <value>
                <fullName>4056</fullName>
            </value>
            <value>
                <fullName>4060</fullName>
            </value>
            <value>
                <fullName>4062</fullName>
            </value>
            <value>
                <fullName>4074</fullName>
            </value>
            <value>
                <fullName>4077</fullName>
            </value>
            <value>
                <fullName>4084</fullName>
            </value>
            <value>
                <fullName>4090</fullName>
            </value>
            <value>
                <fullName>4098</fullName>
            </value>
            <value>
                <fullName>4152</fullName>
            </value>
            <value>
                <fullName>4158</fullName>
            </value>
            <value>
                <fullName>4164</fullName>
            </value>
            <value>
                <fullName>4168</fullName>
            </value>
            <value>
                <fullName>5000</fullName>
            </value>
            <value>
                <fullName>7000</fullName>
            </value>
            <value>
                <fullName>7270</fullName>
            </value>
            <value>
                <fullName>7272</fullName>
            </value>
            <value>
                <fullName>5350000</fullName>
            </value>
            <value>
                <fullName>1000 (Variant TBD)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>