force-app/main/default/objects/leaseworks__Aircraft_Type__c/fields/leaseworks__Lease_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lease_Expiration_Date__c</fullName>
    <defaultValue>DATE( YEAR(TODAY())+1 ,MONTH(TODAY()),DAY(TODAY()))</defaultValue>
    <label>Lease Expiration Date</label>
    <type>Date</type>
</CustomField>