force-app/main/default/objects/leaseworks__Aircraft_Type__c/fields/leaseworks__Value_for_Money__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Value_for_Money__c</fullName>
    <inlineHelpText>How much value for money there is at these market level prices.</inlineHelpText>
    <label>Value for Money</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>