force-app/main/default/objects/leaseworks__Aircraft_Type__c/validationRules/leaseworks__Aircraft_type_cannot_be_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Aircraft_type_cannot_be_empty</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TEXT(leaseworks__Asset_Type_GP__c))</errorConditionFormula>
    <errorDisplayField>leaseworks__Asset_Type_GP__c</errorDisplayField>
    <errorMessage>Please choose an aircraft type.</errorMessage>
</ValidationRule>