force-app/main/default/objects/leaseworks__Aircraft_Type__c/listViews/leaseworks__All.listView-meta.xml
<ListView>
    <fullName>leaseworks__All</fullName>
    <columns>NAME</columns>
    <columns>leaseworks__Aircraft_Type__c</columns>
    <columns>leaseworks__Aircraft_Variant__c</columns>
    <columns>leaseworks__Engine_Type__c</columns>
    <columns>leaseworks__Engine_Variant__c</columns>
    <columns>leaseworks__Fleet_Size_To_Consider__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>